--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["./node_modules/standard/eslintrc.json","next/core-web-vitals"]
+  "extends": ["./node_modules/standard/eslintrc.json","next/core-web-vitals"],
+  "globals": {"React":"writable"},
+  "rules": {"import/export":"off",
+  "unknownAtRules":"off"
+}
 }
