--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@primer/octicons-react": "^19.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
